welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
def faireMotif() {
^PatternPicture:1: error: expected class or object definition
def faireMotif() {
^PatternPicture:78: error: expected class or object definition
def dM() {
^PatternPicture:86: error: expected start of definition
override def run() {
         ^